--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kaisei+Tokumin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@0;1&family=Nabla&display=swap');
 
 
 *{
@@ -30,6 +32,8 @@ nav{
     background-color: var(--color__secundario);
     height: 80px;
     width: 100%;
+    position: fixed;
+    z-index: 9;
 }
 
 label.logo{
@@ -144,6 +148,7 @@ h2{
     top: 30%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
+    z-index: 1;
 }
 
 h3{
@@ -153,6 +158,155 @@ h3{
     top: 35%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
+    z-index: 1;
+}
+
+
+body {
+    background-color: var(--color__principal);
+    
+}
+
+:root {
+    --color-primario: rgb(84, 110, 118);  
+    --color-secundario: rgb(13, 6, 38);    
+    --color-terciario: rgb(211, 17, 179);     
+    --color__blanco: white; 
+}
+
+h1 {
+    text-align: center;
+    color: aliceblue;
+    font-size: 50px;
+}
+
+/*Padre*/
+.flex_container{
+    background-color: var(--color__secundario);
+    border: 5px solid white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 30px;
+    -webkit-box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
+    box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
+    border-radius: 5%;
+}
+
+/*Hijos*/
+.box__01{
+    background-color: var(--color-primario);
+    background: linear-gradient(to bottom, #0373f430, #d400ff84), url("https://i.blogs.es/8f5cd5/lucy-edgerunners-cyberpunk-2077/1366_2000.jpeg") center no-repeat;
+    background-size: cover;
+    width: 290px;
+    height: 150px;
+    line-height: 150px;
+    text-align: center;
+    border: solid black 5px;
+    color: var(--color__blanco); 
+    font-family: 'Nabla';
+    font-style: normal;
+    font-weight: 600;
+    
+}
+
+.box__02{
+    background-color: var(--color-secundario);
+    background: linear-gradient(to bottom, #b4f40306, #ccff004f), url("https://somoskudasai.com/wp-content/uploads/2020/05/portada_evangelion-misato-katsuragi.jpg") center no-repeat;
+    background-size: cover;
+    width: 290px;
+    height: 150px;
+    line-height: 150px;
+    text-align: center;
+    border: solid black 5px;
+    color: rgb(0, 0, 0);
+    font-family: 'Nabla';
+    font-style: normal;
+    font-weight: 600;
+}
+
+.box__03{
+    background-color: var(--color-secundario);
+    background: linear-gradient(to bottom, #0373f415, #08622266), url("https://i0.wp.com/codigoespagueti.com/wp-content/uploads/2023/12/One-Punch-Man-Fanart-hiperrealista-convierte-a-Fubuki-en-la-waifu-definitiva.jpg") center no-repeat;
+    background-size: cover;
+    width: 290px;
+    height: 150px;
+    line-height: 150px;
+    text-align: center;
+    border: solid black 5px;
+    font-family: 'Nabla';
+    font-style: normal;
+    font-weight: 600;
+}
+
+.box__04{
+    background-color: var(--color-primario);
+    background: linear-gradient(to bottom, #626f7e30, #00d9ff1a), url("https://www.anmosugoi.com/wp-content/uploads/2022/11/Chainsaw-Man-Himeno-12.jpg") center no-repeat;
+    background-size: cover;
+    width: 290px;
+    height: 150px;
+    line-height: 150px;
+    text-align: center;
+    border: solid black 5px;
+    font-family: 'Nabla';
+    font-style: normal;
+    font-weight: 600;
+}
+
+/*Footer*/
+
+.footer{
+    background: var(--color__secundario);
+    padding: 5px 0;
+    text-align: center;
+}
+
+.footer a{
+    font-size: 27px;
+    color: var(--color__blanco);
+}
+
+.footer .contenido__footer{
+    width: 100%;
+    margin: 2% 0%;
+    text-decoration: none;
+}
+
+.footer .contenido__footer ul{
+    width: 100%;
+}
+
+.footer .contenido__footer li{
+    display: inline-block;
+    margin: 0 30px;
+}
+
+.footer .contenido__footer a i{
+    font-size: 27px;
+    margin: 0 30px;
+}
+
+@media (max-width: 720px){
+    .footer{
+        text-align: left;
+        padding: 15px;
+    }
+
+    .footer .contenido__footer ul li{
+        display: block;
+        margin: 20px 0px;
+        text-align: left;
+    }
+
+    .footer .contenido__footer{
+        color: var(--color__blanco);
+    }
+
+    
 }
 
 
