--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body{
     font-family: 'Cute Font';
     font-style: normal;
     font-optical-sizing: auto;
-    background-color: var(--color__principal);
 }
+
 
 /*Colores*/
 :root{
@@ -64,6 +64,7 @@ nav ul li a{
     font-family: 'Cute Font';
     font-style: normal;
     font-weight: 400;
+    text-decoration: none;
 }
 
 a:hover{
@@ -215,6 +216,56 @@ h1 {
     }
 }
 
+/*Tarjetas*/
+
+.contenedor__tarjetas{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 25px;
+    padding-bottom: 25px;
+}
+
+.tarjeta{
+    width: 325px;
+    background-color: var(--color__secundario);
+    border-radius: 20px;
+    box-shadow: 0px 2px 4px rgb(0, 0, 0.3);
+    overflow: hidden;
+}
+
+.tarjeta img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.contenido__tarjeta{
+    padding: 20px;
+}
+
+.contenido__tarjeta h1{
+    font-size: 25px;
+    color: var(--color__blanco);
+}
+
+.contenido__tarjeta p{
+    font-size: 20px;
+    color: var(--color__blanco);
+}
+
+.boton__tarjeta{
+    display: inline-block;
+    background-color: var(--color__negro);
+    color: var(--color__blanco);
+    text-decoration: none;
+    padding: 8px 16px;
+    border-radius: 10px;
+}
+    
+/*Termina tarjetas*/
+
 /*Padre*/
 .flex_container{
     background-color: var(--color__secundario);
@@ -302,8 +353,12 @@ h1 {
 }
 
 .footer a{
-    font-size: 27px;
+    font-size: 35px;
     color: var(--color__blanco);
+    font-family: 'Cute Font';
+    font-style: normal;
+    font-weight: 400;
+    text-decoration: none;
 }
 
 .footer .contenido__footer{
