--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@0;1&family=Nabla&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Cinzel:wght@400..900&display=swap');
 
 *{
     padding: 0;
@@ -13,37 +15,37 @@
 }
 
 body{
-    font-family: 'Cute Font';
+    font-family: 'Anton';
     font-style: normal;
     font-optical-sizing: auto;
+    
 }
-
 
 /*Colores*/
 :root{
-    --color__principal: #3a0781; 
-    --color__secundario: #711159; 
-    --color__terciario: #91931c; 
+    --color__principal: #87CEEB; 
+    --color__secundario: #FFA500; 
+    --color__terciario: #FFC0CB; 
     /*colores estandar*/
     --color__blanco: #ffffff; 
     --color__negro: #000000; 
 }
 
 nav{
-    background-color: var(--color__secundario);
+    background-color: var(--color__negro);
     height: 80px;
     width: 100%;
     position: fixed;
-    z-index: 9;
+    z-index: 15;
 }
 
 label.logo{
     color: var(--color__blanco);
-    font-size: 35px; 
+    font-size: 50px; 
     line-height: 80px;
     padding: 0 20px;
-    font-family: "Kaisei Tokumin", serif;
-    font-weight: 400;
+    font-family: "Cinzel";
+    font-weight: 600;
     font-style: normal;
 }
 
@@ -60,8 +62,8 @@ nav ul li {
 
 nav ul li a{
     color: var(--color__blanco); 
-    font-size: 35px;
-    font-family: 'Cute Font';
+    font-size: 25px;
+    font-family: 'Anton';
     font-style: normal;
     font-weight: 400;
     text-decoration: none;
@@ -87,9 +89,9 @@ a:hover{
     display: none;
 }
 
-@media (max-width: 752px){
+@media (max-width: 768px){
     label.logo{
-        font-size: 15px;
+        font-size: 50px;
         margin-left: 50px;
     }
 
@@ -98,16 +100,17 @@ a:hover{
     }
 }
 
-@media(max-width:858px){
+@media(max-width:768px){
     .checkbtn{
         display: block;
+        size: 400px;
     }
 
     nav ul{
         position: fixed;
         width: 100%;
         height: 100vh;
-        background: var(--color__principal);
+        background: var(--color__secundario);
         top: 80px;
         left: -100%;
         text-align: center;
@@ -121,7 +124,8 @@ a:hover{
     }
 
     nav ul li a{
-        font-size: 19px;
+        font-size: 40px;
+        color: var(--color__negro);
     }
     a:hover{
         background: var(--color__terciario);
@@ -194,6 +198,7 @@ h1 {
 .contenido__principal{
     width: 80%;
     margin: 3% auto;
+    padding-top: 20px;
 }
 
 .contenido__principal img{
@@ -206,12 +211,42 @@ h1 {
 
 .texto__caja{
     color: var(--color__negro);
-    font-size: 27px;
+    font-size: 35px;
     justify-content: center;
+    text-align: justify;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 @media (max-width: 720px){
     .contenido__principal img{
+        max-width: 100%;
+    }
+}
+
+.contenido__secundario{
+    width: 80%;
+    margin: 3% auto;
+    padding-bottom: 20px;
+}
+
+.contenido__secundario img{
+    max-width: 450px;
+    border-radius: 10px;
+    float: left;
+    margin-right: 5%;
+    margin-bottom: 5%;
+}
+
+.texto__caja__secundaria{
+    color: var(--color__negro);
+    font-size: 35px;
+    justify-content: center;
+    text-align: justify;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+@media (max-width: 720px){
+    .contenido__secundario img{
         max-width: 100%;
     }
 }
@@ -224,15 +259,24 @@ h1 {
     flex-wrap: wrap;
     gap: 25px;
     margin-top: 25px;
-    padding-bottom: 25px;
+    padding-bottom: 40px;
 }
 
 .tarjeta{
     width: 325px;
-    background-color: var(--color__secundario);
+    background-color: var(--color__negro);
     border-radius: 20px;
-    box-shadow: 0px 2px 4px rgb(0, 0, 0.3);
+    box-shadow: 0px 4px 8px rgb(0, 0, 0.2);
     overflow: hidden;
+    transition: transform 0.3s ease-in;
+}
+
+.tarjeta:hover{
+    transform: scale(1.1);
+}
+
+.tarjeta:hover::after{
+    opacity: 1s;
 }
 
 .tarjeta img{
@@ -257,7 +301,7 @@ h1 {
 
 .boton__tarjeta{
     display: inline-block;
-    background-color: var(--color__negro);
+    background-color: var(--color__secundario);
     color: var(--color__blanco);
     text-decoration: none;
     padding: 8px 16px;
@@ -267,13 +311,14 @@ h1 {
 /*Termina tarjetas*/
 
 /*Padre*/
+
 .flex_container{
     background-color: var(--color__secundario);
     border: 5px solid white;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
     margin-bottom: 5%;
     justify-content: center;
@@ -281,13 +326,14 @@ h1 {
     -webkit-box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
     box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
-    border-radius: 5%;
+    border-radius: 2%;
 }
 
 /*Hijos*/
+
 .box__01{
     background-color: var(--color-primario);
-    background: linear-gradient(to bottom, #0373f430, #d400ff84), url("https://i.blogs.es/8f5cd5/lucy-edgerunners-cyberpunk-2077/1366_2000.jpeg") center no-repeat;
+    background: linear-gradient(to bottom, #0373f430, #d400ff84), url("../img/car.jpg") center no-repeat;
     background-size: cover;
     width: 290px;
     height: 150px;
@@ -303,7 +349,7 @@ h1 {
 
 .box__02{
     background-color: var(--color-secundario);
-    background: linear-gradient(to bottom, #b4f40306, #ccff004f), url("https://somoskudasai.com/wp-content/uploads/2020/05/portada_evangelion-misato-katsuragi.jpg") center no-repeat;
+    background: linear-gradient(to bottom, #b4f40306, #ccff004f), url("../img/congelador.jpg") center no-repeat;
     background-size: cover;
     width: 290px;
     height: 150px;
@@ -318,7 +364,7 @@ h1 {
 
 .box__03{
     background-color: var(--color-secundario);
-    background: linear-gradient(to bottom, #0373f415, #08622266), url("https://i0.wp.com/codigoespagueti.com/wp-content/uploads/2023/12/One-Punch-Man-Fanart-hiperrealista-convierte-a-Fubuki-en-la-waifu-definitiva.jpg") center no-repeat;
+    background: linear-gradient(to bottom, #0373f415, #08622266), url("../img/volcan.jpg") center no-repeat;
     background-size: cover;
     width: 290px;
     height: 150px;
@@ -332,7 +378,7 @@ h1 {
 
 .box__04{
     background-color: var(--color-primario);
-    background: linear-gradient(to bottom, #626f7e30, #00d9ff1a), url("https://www.anmosugoi.com/wp-content/uploads/2022/11/Chainsaw-Man-Himeno-12.jpg") center no-repeat;
+    background: linear-gradient(to bottom, #626f7e30, #00d9ff1a), url("") center no-repeat;
     background-size: cover;
     width: 290px;
     height: 150px;
@@ -344,18 +390,79 @@ h1 {
     font-weight: 600;
 }
 
+.flex_container__galeria{
+   
+    border: solid white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%; 
+    height: 100%;
+    margin: auto;
+    margin-bottom: 5%;
+    padding-bottom: 40px;
+    justify-content: center;
+    -webkit-box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
+    box-shadow: 10px 16px 22px 21px rgba(0,0,0,0.75);
+    
+}
+
+/*Hijos*/
+
+.galeria__fotos{
+    background-color: var(--color-primario);
+    background: linear-gradient(to bottom, #0373f430, #d400ff84), url("../img/mandarinas.jpg") center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    line-height: 150px;
+    text-align: center;
+    border: solid black 5px;
+    color: var(--color__blanco); 
+    font-family: 'Nabla';
+    font-style: normal;
+    font-weight: 600;
+    
+}
+
+.galeria__fotos h1{
+    font-size: 45px;
+    line-height: 150px;
+}
+
+/*mapa*/
+
+.mapa{
+    max-width: 720px;
+    margin: 40px auto;
+}
+
+.mapa h1{
+    color: var(--color__negro);
+    text-align: center;
+}
+
+iframe{
+    width: 100%;
+    margin: 0 auto;
+    border: 5px solid #000000 !important;
+}
+
+
+
 /*Footer*/
 
 .footer{
-    background: var(--color__secundario);
+    background: var(--color__negro);
     padding: 5px 0;
     text-align: center;
 }
 
 .footer a{
-    font-size: 35px;
+    font-size: 25px;
     color: var(--color__blanco);
-    font-family: 'Cute Font';
+    font-family: 'Anton';
     font-style: normal;
     font-weight: 400;
     text-decoration: none;
@@ -365,6 +472,7 @@ h1 {
     width: 100%;
     margin: 2% 0%;
     text-decoration: none;
+    color: var(--color__blanco);
 }
 
 .footer .contenido__footer ul{
@@ -396,6 +504,219 @@ h1 {
     .footer .contenido__footer{
         color: var(--color__blanco);
     }
+      
+}
+
+/*Tarjeta página de fotos*/
+
+.card{
+    margin: 5% auto;
+    max-width: 720px;
+    width: 90%;
+}
+
+.card img{
+    max-height: 300px;
+    object-fit: cover;
+    width: 100%;
+    padding: 20px;
+    border-radius: 5%;
+}
+
+/*Termina tarjeta de página de fotos*/
+
+.texto__principal{
+    padding-top: 40px;
+    font-family: Anton;
+    font-size: 70px;
+    padding-bottom: 20px;
+}
+
+.texto__carrusel{
+    padding-top: 40px;
+    font-family: Anton;
+    font-size: 70px;
+    padding-bottom: 20px;
+}
+
+/*Hero Principal*/
+.hero__principal{
+    background: linear-gradient(to bottom, #e9e8eb77, #172b101a), url("../img/verde.jpg");
+    background-size: cover;
+    height: 70vh;
+    border-radius: 0px 0px 90px 0px;
+}
+
+.texto__inicio__principal h2{
+    font-size: 130px;
+    color: var(--color__blanco);
+    font-family: Cinzel;
+    font-weight: bold;
+    position: absolute;
+    justify-content: end;
+    
+}
+
+.texto__inicio__principal h3{
+    font-size: 25px;
+    color: var(--color__blanco);
+    padding-top: 30px;
+    font-family: serif;
+}
+
+
+/*Termina Hero Principal*/
+
+/*CSS página Trayectoria*/
+.hero__trayectoria{
+    background: linear-gradient(to bottom, #16062d63, #151501bf), url("../img/pao__museo.jpg");
+    background-size: cover;
+    height: 60vh;
+    text-align: center;
+    border-radius: 0px 0px 90px 0px;
+    
+}
+
+.texto__inicio__trayectoria h2{
+    color: var(--color__blanco);
+    font-family: Cinzel;
+    font-style: unset;
+    font-size: 70px;
+    font-weight: bold;
     
     
 }
+
+/*Termina CSS Trayectoria*/
+
+/*CSS contacto*/
+
+.hero__contacto{
+    background: linear-gradient(to bottom, #16062d63, #151501bf), url("../img/cabaña.jpg");
+    background-size: cover;
+    background-position: 100%;
+    height: 60vh;
+    text-align: center;
+    border-radius: 0px 0px 90px 0px;
+    
+}
+
+.texto__inicio__contacto h2{
+    color: var(--color__blanco);
+    font-family: Cinzel;
+    font-style: unset;
+    font-size: 70px;
+    font-weight: bold; 
+}
+
+.contacto__container{
+    flex-direction: row;
+}
+
+.contacto__item{
+    padding-top: 20px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+}
+
+.contacto__item a{
+    text-decoration: none;
+    color: var(--color__negro);
+    font-family: Anton;
+
+}
+
+.contacto__item i{
+    color: var(--color__secundario);
+    
+}
+
+.mapa__texto{
+    font-family: Anton;
+    font-size: 70px;
+    padding-bottom: 20px;
+}
+
+/*Termina CSS Contacto*/
+
+/*grid Galería*/
+
+.grid-container {
+    padding-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    width: 100%;
+    padding-bottom: 20px;
+}
+.grid-item {
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    text-align: center;
+    font-size: 20px;
+    color: var(--color__negro);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.grid-item:hover {
+    transform: scale(1.1);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+}
+.grid-item::after {
+    content: attr(data-name);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--color__blanco);
+    font-size: 40px;
+    font-family: Cinzel;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+.grid-item:hover::after {
+    opacity: 1;
+}
+.grid-item:nth-child(1) { background-image: url('../img/congelador.jpg'); }
+.grid-item:nth-child(2) { background-image: url('../img/kiwi.jpg'); }
+.grid-item:nth-child(3) { background-image: url('../img/mandarinas.jpg'); }
+.grid-item:nth-child(4) { background-image: url('../img/volcan.jpg'); }
+.grid-item:nth-child(5) { background-image: url('../img/car.jpg'); }
+.grid-item:nth-child(6) { background-image: url('../img/lapiz.jpg'); }
+.grid-item:nth-child(7) { background-image: url('../img/morro.jpg'); }
+.grid-item:nth-child(8) { background-image: url('../img/negro.jpg'); }
+.grid-item:nth-child(9) { background-image: url('../img/tatemono.jpg'); }
+.grid-item:nth-child(10) { background-image: url('../img/calacas.jpg'); }
+.grid-item:nth-child(11) { background-image: url('../img/verde.jpg'); }
+.grid-item:nth-child(12) { background-image: url('../img/noche.jpg'); }
+
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+}
+/*Termina grid Galería*/
+
+/*CSS contacto*/
+
+
+
+/*Termina CSS contacto*/
+
+
